--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -58,7 +58,7 @@ if (WITH_FESAPI)
 	set (FESAPI_LIBRARY_RELEASE_WLE ",'${FESAPI_LIBRARY_RELEASE_WLE}'")
 endif ()
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-	set (EXTRA_COMPILE_ARGS "extra-compile-args=['/DSWIG_TYPE_TABLE=FESTAPI', '/utf-8']")
+	set (EXTRA_COMPILE_ARGS "extra-compile-args=['/DSWIG_TYPE_TABLE=FESTAPI', '/std:c++17', '/utf-8']")
 else ()
 	set (EXTRA_COMPILE_ARGS "extra-compile-args=['-DSWIG_TYPE_TABLE=FESTAPI', '-std=c++17']")
 endif()
