--- a/example/withFesapi/CMakeLists.txt
+++ b/example/withFesapi/CMakeLists.txt
@@ -50,14 +50,19 @@ if (WIN32)
 	target_link_libraries (${PROJECT_NAME} PRIVATE bcrypt.lib)
 endif()
 if (WITH_ETP_SSL)
-	target_compile_definitions(${PROJECT_NAME} PRIVATE WITH_ETP_SSL)
-	target_link_libraries(${PROJECT_NAME} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+	if (NOT USE_WINTLS_INSTEAD_OF_OPENSSL)
+		target_link_libraries(${PROJECT_NAME} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+	endif()
 endif ()
 target_link_libraries(${PROJECT_NAME} PRIVATE FESAPI::FESAPI)
 
 target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${AVRO_INCLUDE_DIR})
 if (WITH_ETP_SSL)
-	target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${OPENSSL_INCLUDE_DIR})
+	if (NOT USE_WINTLS_INSTEAD_OF_OPENSSL)
+		target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${OPENSSL_INCLUDE_DIR})
+	else()
+		target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${WINTLS_INCLUDE_DIR})
+	endif()
 endif ()
 target_include_directories(${PROJECT_NAME} PRIVATE ${FESAPI_INCLUDE_DIR})
 
