--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-set(FESAPI_TOOLS_HEADERS 	${CMAKE_CURRENT_LIST_DIR}/nsDefinitions.h )
+set(FETPAPI_HEADERS 	${CMAKE_CURRENT_LIST_DIR}/macroDefinitions.h )
 
 include(${CMAKE_CURRENT_LIST_DIR}/etp/CMakeLists.txt)
